--- a/package.json
+++ b/package.json
@@ -2,13 +2,24 @@
   "name": "starknet-aave-bridge.js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "tsc"
   },
   "author": "Soufiane Hajazi",
   "license": "MIT",
   "dependencies": {
     "starknet": "^3.12.3"
+  },
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "style": "module",
+      "parser": "typescript"
+    }
+  },
+  "devDependencies": {
+    "typescript": "^4.7.3"
   }
 }
