--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Soufiane Hajazi",
   "license": "MIT",
   "dependencies": {
+    "get-starknet": "^1.4.1",
     "starknet": "^3.12.3"
   },
   "importSort": {
