--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/hsouf/starknet-aave-bridge-js#readme",
   "dependencies": {
+    "@typechain/starknet": "^0.2.3",
     "get-starknet": "^1.4.2",
     "lint": "^0.7.0",
     "starknet": "^3.12.3"
@@ -33,9 +34,11 @@
     "*.{ts,js,md,yml,json}": "prettier --write"
   },
   "devDependencies": {
+    "@types/elliptic": "^6.4.14",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "^8.17.0",
+    "typechain": "^8.1.0",
     "typescript": "^4.7.3"
   }
 }
