--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "prepare": "yarn tsc",
-    "lint": "eslint . --cache --fix --ext .ts"
+    "lint": "eslint . --cache --fix --ext .ts",
+    "generate-contracts": "typechain --target starknet --out-dir src/generated/contracts src/abis/*.json"
   },
   "author": "Soufiane Hajazi",
   "license": "MIT",
